hphp/hack/test/typecheck/constraints/override_generic_parameter_bad.php.exp
File "override_generic_parameter_bad.php", line 9, characters 25-27:
The method `get` is not compatible with the overridden method (Typing[4341])
  File "override_generic_parameter_bad.php", line 9, characters 29-34:
  Expected `string`
  File "override_generic_parameter_bad.php", line 5, characters 26-26:
  But got `T`
